--- a/app/views/HomeView.html
+++ b/app/views/HomeView.html
@@ -4,13 +4,14 @@
       <div class="text-center">
         <h1>Welcome to Gregslist</h1>
         <h2>Choose a listing type</h2>
-        <div>
-          <a href="#/cars">
-            <button class="btn btn-dark" type="button">
-              Cars <i class="mdi mdi-car-convertible"></i>
-            </button>
-          </a>
-        </div>
+
+        <a href="#/cars">
+          <button class="btn btn-dark" type="button">Cars <i class="mdi mdi-car-convertible"></i></button>
+        </a>
+
+        <a href="#/houses">
+          <button class="btn btn-dark" type="button">Houses<i class="mdi mdi-home"></i></button>
+        </a>
       </div>
     </div>
   </section>
